--- a/review/templates/review/edit.html
+++ b/review/templates/review/edit.html
@@ -1,9 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="{% url 'review:update' review.pk %}">
-  <input type="text" name="title" value="{{ review.title }}">
-  <textarea name="content" cols="30" rows="10">{{ review.content }}</textarea>
-  <input type="submit">
-</form>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <div class="col-6 my-3">
+      <h1 class="text-center fw-bold">내용 수정하기</h1>
+      <form action="{% url 'review:update' review.pk %}" class="d-flex flex-column">
+        <p class="fs-2">제목</p>
+        <input type="text" name="title" class="mb-3" value="{{ review.title }}">
+        <p class="fs-2">내용</p>
+        <textarea name="content" id="" cols="30" rows="10" class="mb-3">{{ review.content }}</textarea>
+        <input type="submit" class="btn btn-primary" value="수&nbsp정">
+        <a href="{% url 'review:detail' review.pk %}" class="btn btn-danger my-3">돌아가기</a>
+        <a href="{% url 'review:index' %}" class="btn btn-success">홈으로</a>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
