--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -1,23 +1,50 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<a href="{% url 'review:new' %}">리뷰 작성</a>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">리뷰 번호</th>
-      <th scope="col">리뷰 제목</th>
-      <th scope="col">작성 시간</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for review in reviews %}
-    <tr>
-      <th scope="row">{{ review.pk }}</th>
-      <td><a href="{% url 'review:detail' review.pk %}">{{ review.title }}</a></td>
-      <td>{{ review.created_at }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+<!-- 리뷰목록 -->
+<article class="container">
+  <!-- index 와 리뷰 작성 버튼 -->
+  <div class="d-flex justify-content-between my-3">
+    <h1 class="fw-bold mb-3 display-4">리뷰 목록</h1>
+    <a href="{% url 'review:new' %}" class="btn btn-outline-dark my-3 fs-4">
+      리뷰작성
+    </a>
+  </div>
+  <table class=" table table-dark table-hover text-center">
+    <thead>
+      <tr>
+        <th scope="col" class="text-start ps-4">리뷰 번호</th>
+        <th scope="col">리뷰 제목</th>
+        <th scope="col">작성 시간</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for review in reviews %}
+      <tr>
+        <th scope="row" class="text-start ps-5">{{ review.pk }}</th>
+        <td><a href="{% url 'review:detail' review.pk %}" class="text-decoration-none text-white">{{ review.title }}</a>
+        </td>
+        <td>{{ review.created_at| date:'P' }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</article>
+<!-- pagination -->
+<nav aria-label="..." class="d-flex justify-content-center">
+  <ul class="pagination">
+    <li class="page-item disabled">
+      <a class="page-link">Previous</a>
+    </li>
+    <li class="page-item active" aria-current="page">
+      <a class="page-link" href="#">1</a>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">Next</a>
+    </li>
+  </ul>
+</nav>
+
 {% endblock %}
