--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,36 @@
 </head>
 
 <body>
-  {% block content %}
-  {% endblock %}
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="{% url 'review:index' %}">Movie</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Board</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Event</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div style="margin-bottom: 12rem;">
+    {% block content %}
+    {% endblock %}
+  </div>
+  <!-- footer -->
+  <footer class="fixed-bottom bg-dark text-white">
+    <p class="text-center lh-base mt-2">Powered by html</p>
+  </footer>
 </body>
 
 </html>
