--- a/common/templates/common/register.html
+++ b/common/templates/common/register.html
@@ -6,7 +6,7 @@
         <div class="col-12 ">
             <div class="row mt-5">
                 <div class="col-12 ">
-                    <form method="POST" action=".">
+                    <form method="POST" action="">
                         {% csrf_token %}
                         <div class="form-group">
                             <label for="username">사용자 이름</label>
